[package]
name = "runity"
version = "0.1.0"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "runity"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "*"
num = "0.3"